--- a/client/views/users/list.html
+++ b/client/views/users/list.html
@@ -1,6 +1,6 @@
 <div class="list">
 	<div class="user" ng-repeat="user in users">
-		<img class="user-image" ng-src="{{getUserImage(user)}}" />
+		<img class="user-image" ng-src="{{getProfileImage(user)}}" />
 		<span>{{user.name}}</span>
 	</div>
 </div>
