--- a/client/views/expenses/create.html
+++ b/client/views/expenses/create.html
@@ -44,7 +44,7 @@
 			<div class="input-group tiny-users">
 				<div class="tiny-user selectable" ng-class="{'selected-user': isPayerSelected(user)}" ng-repeat="user in getUsers()">
 					<div ng-click="toggleSelectedPayer(user)">
-						<img class="user-image" ng-src="{{getUserImage(user)}}" />
+						<img class="user-image" ng-src="{{getProfileImage(user)}}" />
 						<div class="name">{{user.name}}</div>
 					</div>
 					<div ng-if="isPayerSelected(user)">
@@ -61,7 +61,7 @@
 			<div class="input-group tiny-users">
 				<div class="tiny-user selectable" ng-class="{'selected-user': isOwerSelected(user)}" ng-repeat="user in getUsers()">
 					<div ng-click="toggleSelectedOwer(user)">
-						<img class="user-image" ng-src="{{getUserImage(user)}}" />
+						<img class="user-image" ng-src="{{getProfileImage(user)}}" />
 						<div class="name">{{user.name}}</div>
 					</div>
 					<div ng-if="isOwerSelected(user)">
