--- a/client/views/users/list.html
+++ b/client/views/users/list.html
@@ -1,3 +1,6 @@
+<div class="clearfix margin-bottom">
+	<a href="#/users/create" class="btn btn-info pull-right">Create new user</a>
+</div>
 <div class="list">
 	<div class="user" ng-repeat="user in users">
 		<img class="user-image" ng-src="{{getProfileImage(user)}}" />
