--- a/client/views/users/create.html
+++ b/client/views/users/create.html
@@ -39,6 +39,6 @@
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
-	<a href="#/users" class="btn btn-danger pull-left">Cancel</a>
+	<a ng-href="#/users" class="btn btn-danger pull-left">Cancel</a>
 	<button type="submit" name="submit" id="submit" class="btn btn-success pull-right">Submit</button>
 </form>
