context username in routeParams

--- a/client/views/users/delete.html
+++ b/client/views/users/delete.html
@@ -2,7 +2,7 @@
 
 <form role="form" ng-submit="delete()">
 	<div class="well well-sm">
-		<strong>Are you sure you want to delete the user "{{user.name}}" ?</strong>
+		<strong>Are you sure you want to delete the user "{{username}}" ?</strong>
 	</div>
 	<div class="btn-group pull-right yes-no">
 		<a class="btn btn-danger" ng-href="#/users">No</a>
