--- a/client/views/users/create.html
+++ b/client/views/users/create.html
@@ -28,14 +28,14 @@
 	<div class="form-group">
 		<label for="InputEmail">Email</label>
 		<div class="input-group">
-			<input type="email" class="form-control" ng-model="user.email" id="InputEmailFirst" name="InputEmail" placeholder="Email" required>
+			<input type="email" class="form-control" ng-model="user.email" id="InputEmail" name="InputEmail" placeholder="Email" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="InputEmail">Confirm Email</label>
 		<div class="input-group">
-			<input type="email" class="form-control" ng-model="user.confirm_email" id="InputEmailSecond" name="InputEmail" placeholder="Confirm Email" required>
+			<input type="email" class="form-control" ng-model="user.confirm_email" id="InputEmailConfirm" name="InputEmail" placeholder="Confirm Email" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
