--- a/client/views/users/details.html
+++ b/client/views/users/details.html
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-	<img class="pull-left user-image detail-image" ng-src="{{getProfileImage(user)}}" />
+	<img class="pull-left item-image detail-image" ng-src="{{getProfileImage(user)}}" />
 </div>
 <div class="col-md-9">
 	<h3>{{user.name}}</h3>
