delete expenses and payments files (will be copied later), rename "delete" to "remove"

--- a/client/views/groups/remove.html
+++ b/client/views/groups/remove.html
@@ -1,6 +1,6 @@
 <h3>Delete Group</h3>
 
-<form role="form" ng-submit="delete()">
+<form role="form" ng-submit="remove()">
 	<div class="well well-sm">
 		<strong>Are you sure you want to delete the group "{{group.name}}" ?</strong>
 	</div>
