jslint, rename "delete" to "remove", use log handler instead of console.log

--- a/client/views/groups/list.html
+++ b/client/views/groups/list.html
@@ -8,7 +8,7 @@
 		</a>
 		<div class="pull-right btn-group-sm">
 			<a ng-href="#/groups/edit/{{group._id}}" class="btn btn-success"> <i class="fa fa-pencil"></i> </a>
-			<a ng-href="#/groups/delete/{{group._id}}" class="btn btn-danger"> <i class="fa fa-close"></i> </a>
+			<a ng-href="#/groups/remove/{{group._id}}" class="btn btn-danger"> <i class="fa fa-close"></i> </a>
 		</div>
 		<div class="info">
 			<h4>{{group.name}}</h4>
