--- a/client/views/users/list.html
+++ b/client/views/users/list.html
@@ -8,7 +8,7 @@
 		</a>
 		<div class="pull-right btn-group-sm">
 			<a ng-href="#/users/edit/{{user.username}}" class="btn btn-success"> <i class="fa fa-pencil"></i> </a>
-			<a ng-href="#/users/delete/{{user.username}}" class="btn btn-danger"> <i class="fa fa-close"></i> </a>
+			<a ng-href="#/users/remove/{{user.username}}" class="btn btn-danger"> <i class="fa fa-close"></i> </a>
 		</div>
 		<div class="info">
 			<h4>{{user.name}}</h4>
