--- a/client/views/users/create.html
+++ b/client/views/users/create.html
@@ -1,43 +1,44 @@
 <h3>Create User</h3>
 
-<form role="form" ng-submit="create(user)">
+<form name="form" role="form" ng-submit="create(user)">
 	<div class="well well-sm">
 		<strong><span class="glyphicon glyphicon-asterisk"></span>Required Field</strong>
 	</div>
 	<div class="form-group">
 		<label for="InputName">Name</label>
 		<div class="input-group">
-			<input type="text" class="form-control" ng-model="user.name" name="InputName" id="InputName" placeholder="Name" required>
+			<input type="text" class="form-control" ng-model="user.name" name="name" id="inputName" placeholder="Name" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="InputUsername">Username</label>
 		<div class="input-group">
-			<input type="text" class="form-control" ng-model="user.username" name="InputUsername" id="InputUsername" placeholder="Username" required>
+			<input type="text" class="form-control" ng-model="user.username" name="username" id="inputUsername" placeholder="Username" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="InputPassword">Password</label>
 		<div class="input-group">
-			<input type="password" class="form-control" ng-model="user.password" name="InputPassword" id="InputPassword" placeholder="Password" required>
+			<input type="password" class="form-control" ng-model="user.password" name="password" id="inputPassword" placeholder="Password" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="InputEmail">Email</label>
 		<div class="input-group">
-			<input type="email" class="form-control" ng-model="user.email" id="InputEmail" name="InputEmail" placeholder="Email" required>
+			<input type="email" class="form-control" ng-model="user.email" name="email" id="inputEmail" placeholder="Email" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
 	<div class="form-group">
 		<label for="InputEmail">Confirm Email</label>
 		<div class="input-group">
-			<input type="email" class="form-control" ng-model="user.confirm_email" id="InputEmailConfirm" name="InputEmail" placeholder="Confirm Email" required>
+			<input type="email" class="form-control" ng-model="user.confirm_email" name="confirm_email" id="InputEmailConfirm" placeholder="Confirm Email" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
+      	<label ng-if="form.email.$viewValue !== form.confirm_email.$viewValue && form.confirm_email.$touched">* Email addresses must match</label>
 	</div>
 	<a ng-href="#/users" class="btn btn-danger pull-left">Cancel</a>
 	<button type="submit" name="submit" id="submit" class="btn btn-success pull-right">Submit</button>
