update groups files (same changes as users)

--- a/client/views/groups/edit.html
+++ b/client/views/groups/edit.html
@@ -7,7 +7,7 @@
 	<div class="form-group">
 		<label for="InputName">Name</label>
 		<div class="input-group">
-			<input type="text" class="form-control" ng-model="group.name" name="InputName" id="InputName" placeholder="Name" required>
+			<input type="text" class="form-control" ng-model="group.name" name="name" id="InputName" placeholder="Name" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
