--- a/client/views/groups/create.html
+++ b/client/views/groups/create.html
@@ -1,13 +1,13 @@
 <h3>Create Group</h3>
 
-<form role="form" ng-submit="create(group)">
+<form name="form" role="form" ng-submit="create(group)">
 	<div class="well well-sm">
 		<strong><span class="glyphicon glyphicon-asterisk"></span>Required Field</strong>
 	</div>
 	<div class="form-group">
 		<label for="InputName">Name</label>
 		<div class="input-group">
-			<input type="text" class="form-control" ng-model="group.name" name="InputName" id="InputName" placeholder="Name" required>
+			<input type="text" class="form-control" ng-model="group.name" name="name" id="InputName" placeholder="Name" required>
 			<span class="input-group-addon"><span class="glyphicon glyphicon-asterisk"></span></span>
 		</div>
 	</div>
